<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="192dp"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            app:title="Sobre Nosotros"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:src="@drawable/escudoazulsinfondo"
                android:layout_gravity="center"
                android:padding="5dp"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.constraint.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/texto1"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                android:layout_marginTop="12dp"
                card_view:cardUseCompatPadding="true"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto1"
                    android:padding="10dp">

                </TextView>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/texto2"
                app:layout_constraintTop_toBottomOf="@+id/texto1"
                android:layout_marginTop="12dp"
                card_view:cardUseCompatPadding="true"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto2"
                    android:padding="10dp">

                </TextView>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/texto3"
                app:layout_constraintTop_toBottomOf="@+id/texto2"
                android:layout_marginTop="12dp"
                card_view:cardUseCompatPadding="true"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto3"
                    android:padding="10dp">

                </TextView>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/texto4"
                app:layout_constraintTop_toBottomOf="@+id/texto3"
                android:layout_marginTop="12dp"
                card_view:cardUseCompatPadding="true"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto4"
                    android:padding="10dp">

                </TextView>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/texto5"
                app:layout_constraintTop_toBottomOf="@+id/texto4"
                android:layout_marginTop="12dp"
                card_view:cardUseCompatPadding="true"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    android:padding="15dp">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:orientation="vertical"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/gmailicon"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:contentDescription="@string/Rutas"/>
                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/likedin"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:contentDescription="@string/Rutas"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:orientation="vertical"
                        android:paddingLeft="3dp"
                        android:paddingStart="3dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/Texto5"
                            android:id="@+id/gmail"
                            android:layout_gravity="center_horizontal"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:orientation="horizontal"
                            android:paddingLeft="3dp"
                            android:paddingStart="3dp"
                            android:paddingTop="5dp"
                            android:id="@+id/linkedIn">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Texto6"
                                android:paddingRight="10dp"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/texto6"
                app:layout_constraintTop_toBottomOf="@+id/texto5"
                android:layout_marginTop="12dp"
                card_view:cardUseCompatPadding="true"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Texto7"
                    android:padding="10dp">

                </TextView>

            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
