<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_dialog_entrar"
    android:background="@drawable/border"
    tools:context="com.example.informatica.xabiagame.MainActivity">


    <Button
        android:id="@+id/btnDialogDesconnect"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Desconectar"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/AzulClaroJavea"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="360dp"
        android:layout_height="1dp"
        android:background="#C8C9CB"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="280dp"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:text="@string/InfoDialog"
        android:layout_width="283dp"
        android:layout_height="42dp"
        android:id="@+id/textView"
        android:textColor="@color/Blacky"
        android:gravity="center"
        android:layout_marginTop="296dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <Button
        android:text="@string/Nuevo_Usuario"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnDiaUsuNew"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/rojito"
        android:drawableLeft="@drawable/gmailicon"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="360dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/depturismenofondo"
        android:id="@+id/imageView10"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintVertical_bias="0.08" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />


</android.support.constraint.ConstraintLayout>